--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula de Funções</title>
+    <title>Document</title>
 </head>
 <body>
-    
-
-
-
-
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
